--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,6 @@
 
 <head>
 	<meta charset="utf-8">
-	<meta name="keywords" content="">
-	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 
@@ -21,7 +19,7 @@
 	<script src="./js/formHandler.js"></script>
 	<title>Contactez La Panthère</title>
 	<meta name="description"
-		content="Prenez contact avec notre agence professionnelle La Panthère pour réaliser un design qui vous ressemble" />
+		content="Prenez contact avec l'agence La Panthère pour réaliser un design qui vous ressemble" />
 
 
 
