--- a/contact.html
+++ b/contact.html
@@ -6,10 +6,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
+	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
 
 
 	<script src="./js/jquery-2.1.0.min.js"></script>
@@ -17,6 +17,7 @@
 	<script src="./js/blocs.min.js"></script>
 	<script src="./js/jqBootstrapValidation.js"></script>
 	<script src="./js/formHandler.js"></script>
+
 	<title>Contactez La Panthère</title>
 	<meta name="description"
 		content="Prenez contact avec l'agence La Panthère pour réaliser un design qui vous ressemble" />
@@ -33,11 +34,13 @@
 	<!-- Principal conteneur -->
 	<div class="page-container">
 
-		<!-- bloc-0 -->
-		<div class="bloc bgc-white l-bloc" id="bloc-0">
+		<!-- Header -->
+		<header class="bloc bgc-white l-bloc " id="bloc-0">
 			<div class="container bloc-sm">
+
 				<nav class="navbar row">
 					<div class="navbar-header">
+
 						<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg"
 								alt="banière agence La Panthère" height="40" /></a>
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
@@ -49,20 +52,20 @@
 					<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 						<ul class="site-navigation nav navbar-nav">
 							<li>
-								<a href="index.html">Accueil</a>
+								<a href="index.html">Page d'accueil</a>
 							</li>
 						</ul>
 					</div>
 				</nav>
 			</div>
-		</div>
-		<!-- bloc-0 END -->
+		</header>
+		<!-- Header end -->
 
 		<!-- bloc-6 -->
 		<div class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
 			<div class="container bloc-lg">
 				<div class="row">
-					<div class="col-sm-12">
+					<div class="col-sm-12 contactTitle">
 						<h1 class="text-center hero-bloc-text tc-white">
 							Parlons web design !
 						</h1>
@@ -113,10 +116,12 @@
 							</button>
 						</form>
 					</div>
-					<div class="col-sm-6">
-						<p>
-							contact@agencelapanthere.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi
-							au vendredi<br>
+					<div class="col-sm-6 adressContact">
+						<a class="emailAdress" href="mailto:contact@agencelapanthere.com">
+							Contact e-mail</a>
+						<p>2 place Sathonay 69001 Lyon</p>
+						<p> Ouvert de 9h à 18h, du lundi
+							au vendredi</p>
 						</p>
 					</div>
 				</div>
@@ -135,29 +140,36 @@
 			<div class="container bloc-sm">
 				<div class="row">
 					<div class="col-sm-12">
-						<p class="text-center white">
+						<p class="text-center black">
 							Agence La Panthère - Agence web basée à Lyon.<br>
 						</p>
+
+						<!-- Icones réseaux sociaux -->
 						<div class="row row-no-gutters social">
-							<div class="col-sm-3">
-								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+							<div class="flexBetween maxSize75 iconFooter">
+								<div class="col-sm-3">
+									<div class="text-center">
+										<a class="social" href="index.html"><span
+												class="fa fa-twitter icon-md"></span></a>
+									</div>
 								</div>
-							</div>
-							<div class="col-sm-3">
-								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+								<div class="col-sm-3">
+									<div class="text-center">
+										<a class="social" href="index.html"><span
+												class="fa fa-facebook icon-md"></span></a>
+									</div>
 								</div>
-							</div>
-							<div class="col-sm-3">
-								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+								<div class="col-sm-3">
+									<div class="text-center">
+										<a class="social" href="index.html"><span
+												class="fa fa-dribbble icon-md"></span></a>
+									</div>
 								</div>
-							</div>
-							<div class="col-sm-3">
-								<div class="text-center">
-									<a class="social" href="index.html"><span
-											class="fa fa-instagram icon-md"></span></a>
+								<div class="col-sm-3">
+									<div class="text-center">
+										<a class="social" href="index.html"><span
+												class="fa fa-instagram icon-md"></span></a>
+									</div>
 								</div>
 							</div>
 						</div>
@@ -165,7 +177,8 @@
 				</div>
 			</div>
 		</div>
-		<!-- Footer - bloc-8 END -->
+	</div>
+	<!-- Footer - bloc-8 END -->
 
 	</div>
 	<!-- Principal conteneur END -->
