--- a/index.html
+++ b/index.html
@@ -266,6 +266,8 @@
 						<h4 class="text-center black">
 							Agence La Panthère - Agence web basée à Lyon.<br>
 						</h4>
+
+						<!-- Icones réseaux sociaux -->
 						<div class="row row-no-gutters social">
 							<div class="flexBetween maxSize75 iconFooter">
 								<div class="col-sm-3">
@@ -297,42 +299,43 @@
 								<div class="col-sm-4 footerPartner">
 									<h4>Partenaires</h4>
 									<ul class="footerList">
-										<li><a href="voiture.com">voiture.com</a></li>
-										<li><a href="pizza.com">pizza.com</a></li>
-										<li><a href="matoiture.com">matoiture.com</a></li>
-										<li><a href="immobilierseo.com">immobilierseo.com</a></li>
+										<li><a href="voiture.com">voiture</a></li>
+										<li><a href="pizza.com">pizza</a></li>
+										<li><a href="matoiture.com">matoiture</a></li>
+										<li><a href="immobilierseo.com">immobilierseo</a></li>
 									</ul>
 								</div>
 								<div class="col-sm-4 footerPartner">
 									<h4>Annuaires liste 1</h4>
 									<ul class="footerList">
-										<li><a href="annuaireagence.com">annuaireagence.com</a></li>
-										<li><a href="annuaireseo.com">annuaireseo.com</a></li>
-										<li><a href="annuairemarketing.com">annuairemarketing.com</a></li>
-										<li><a href="123seoture.com">123seo.com</a></li>
-										<li><a href="123site.com">123site.com</a></li>
-										<li><a href="annuairewordpress.com">annuairewordpress.com</a></li>
-										<li><a href="listeagence.com">listeagence.com</a></li>
-										<li><a href="meilleuresagencesparis.com">meilleuresagencesparis.com</a></li>
-										<li><a href="listeseo.com">listeseo.com</a></li>
+										<li><a href="annuaireagence.com">annuaireagence</a></li>
+										<li><a href="annuaireseo.com">annuaireseo</a></li>
+										<li><a href="annuairemarketing.com">annuairemarketing</a></li>
+										<li><a href="123seoture.com">123seo</a></li>
+										<li><a href="123site.com">123site</a></li>
+										<li><a href="annuairewordpress.com">annuairewordpress</a></li>
+										<li><a href="listeagence.com">listeagence</a></li>
+										<li><a href="meilleuresagencesparis.com">meilleuresagencesparis</a></li>
+										<li><a href="listeseo.com">listeseo</a></li>
 									</ul>
 								</div>
 								<div class="col-sm-4 footerPartner">
 									<h4>Annuaires liste 2</h4>
 									<ul class="footerList">
-										<li><a href="betterseo.com">betterseo.com</a></li>
-										<li><a href="ameliorerseo.com">ameliorerseo.com</a></li>
-										<li><a href="seojuicelien.com">seojuicelien.com</a></li>
-										<li><a href="meilleursliens.com">meilleursliens.com</a></li>
-										<li><a href="liensagogo.com">liensagogo.com</a></li>
-										<li><a href="backlink.com">backlink.com</a></li>
-										<li><a href="linkjuiceannuaire.com">linkjuiceannuaire.com</a></li>
-										<li><a href="remontersurgoogle.com">remontersurgoogle.com</a></li>
-										<li><a href="vraiseofiable.com">vraiseofiable.com</a></li>
+										<li><a href="betterseo.com">betterseo</a></li>
+										<li><a href="ameliorerseo.com">ameliorerseo</a></li>
+										<li><a href="seojuicelien.com">seojuicelien</a></li>
+										<li><a href="meilleursliens.com">meilleursliens</a></li>
+										<li><a href="liensagogo.com">liensagogo</a></li>
+										<li><a href="backlink.com">backlink</a></li>
+										<li><a href="linkjuiceannuaire.com">linkjuiceannuaire</a></li>
+										<li><a href="remontersurgoogle.com">remontersurgoogle</a></li>
+										<li><a href="vraiseofiable.com">vraiseofiable</a></li>
 									</ul>
 								</div>
 							</div>
 						</div>
+
 					</div>
 				</div>
 			</div>
