--- a/index.html
+++ b/index.html
@@ -258,6 +258,12 @@
 			</section>
 			<!-- bloc-5-cta END -->
 		</main>
+
+		<!-- ScrollToTop Button -->
+		<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span
+				class="fa fa-chevron-up"></span></a>
+		<!-- ScrollToTop Button END-->
+
 		<!-- Footer - bloc-8 -->
 		<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 			<div class="container bloc-sm">
@@ -299,10 +305,10 @@
 								<div class="col-sm-4 footerPartner">
 									<h4>Partenaires</h4>
 									<ul class="footerList">
-										<li><a href="voiture.com">voiture</a></li>
-										<li><a href="pizza.com">pizza</a></li>
-										<li><a href="matoiture.com">matoiture</a></li>
-										<li><a href="immobilierseo.com">immobilierseo</a></li>
+										<li><a href="voiture.com">voiture.com</a></li>
+										<li><a href="pizza.com">pizza.com</a></li>
+										<li><a href="matoiture.com">matoiture.com</a></li>
+										<li><a href="immobilierseo.com">immobilierseo.com</a></li>
 									</ul>
 								</div>
 								<div class="col-sm-4 footerPartner">
