--- a/contact.html
+++ b/contact.html
@@ -84,8 +84,7 @@
 			<div class="container bloc-lg">
 				<div class="row">
 					<div class="col-sm-6">
-						<form id="form_1" novalidate success-msg="Your message has been sent."
-							fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
+						<form id="form_1">
 							<div class="form-group">
 								<label>
 									Nom
@@ -101,13 +100,13 @@
 							<div class="form-group">
 								<label>
 									Comment nous avez-vous connu ?
-									<input class="form-control" type="email" required id="input_504" />
+									<input class="form-control" required id="input_504" />
 								</label>
 							</div>
 							<div class="form-group">
 								<label>
 									Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
-									<textarea id="message" class="form-control" rows="8" cols="50"
+									<textarea id="message" class="form-control" rows="8" cols="100"
 										required></textarea></label>
 							</div>
 							<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine"
@@ -122,7 +121,6 @@
 						<p>2 place Sathonay 69001 Lyon</p>
 						<p> Ouvert de 9h à 18h, du lundi
 							au vendredi</p>
-						</p>
 					</div>
 				</div>
 			</div>
@@ -136,7 +134,7 @@
 
 
 		<!-- Footer - bloc-8 -->
-		<div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+		<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 			<div class="container bloc-sm">
 				<div class="row">
 					<div class="col-sm-12">
@@ -176,10 +174,8 @@
 					</div>
 				</div>
 			</div>
-		</div>
-	</div>
-	<!-- Footer - bloc-8 END -->
-
+		</footer>
+		<!-- Footer - bloc-8 END -->
 	</div>
 	<!-- Principal conteneur END -->
 
