--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
+	<link rel="icon" type="image/png" href="favicon.jpg">
 
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
@@ -188,9 +188,9 @@
 					</div>
 					<div class="row tight-width-whitespace portfolio-row">
 						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1"
+							<a href="#" data-lightbox="img/1.webp" data-gallery-id="gallery-1"
 								data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img
-									src="img/1.jpg" alt="" class="img-responsive portfolio-thumb" /></a>
+									src="img/1.webp" alt="" class="img-responsive portfolio-thumb" /></a>
 							<h3 class="mg-md text-center">
 								Refonte d'un site web pour un journal local
 							</h3>
@@ -199,9 +199,9 @@
 							</p>
 						</div>
 						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1"
+							<a href="#" data-lightbox="img/2.webp" data-gallery-id="gallery-1"
 								data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img
-									src="img/2.jpg" class="img-responsive portfolio-thumb" alt="" /></a>
+									src="img/2.webp" class="img-responsive portfolio-thumb" alt="" /></a>
 							<h3 class="mg-md text-center">
 								Création d'un site web pour photographes
 							</h3>
@@ -212,9 +212,9 @@
 					</div>
 					<div class="row tight-width-whitespace portfolio-row">
 						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1"
+							<a href="#" data-lightbox="img/3.webp" data-gallery-id="gallery-1"
 								data-caption="Création d'un site internet pour un voyageur"
-								data-frame="snapshot-lb"><img src="img/3.jpg" class="img-responsive portfolio-thumb"
+								data-frame="snapshot-lb"><img src="img/3.webp" class="img-responsive portfolio-thumb"
 									alt="" /></a>
 							<h3 class="mg-md text-center">
 								Création d'un site internet pour un voyageur
@@ -225,9 +225,9 @@
 							</p>
 						</div>
 						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1"
+							<a href="#" data-lightbox="img/4.webp" data-gallery-id="gallery-1"
 								data-caption="Conception d'un site pour une agence de mariage"
-								data-frame="snapshot-lb"><img src="img/4.jpg" class="img-responsive portfolio-thumb"
+								data-frame="snapshot-lb"><img src="img/4.webp" class="img-responsive portfolio-thumb"
 									alt="" /></a>
 							<h3 class="mg-md text-center">
 								Conception d'un site pour une agence de mariage
