Les scripts se chargent correctement en fin de page

--- a/contact.html
+++ b/contact.html
@@ -12,12 +12,6 @@
 	<link rel="stylesheet" type="text/css" href="style.min.css">
 
 
-	<script src="./js/jquery-2.1.0.min.js"></script>
-	<script src="./js/bootstrap.min.js"></script>
-	<script src="./js/blocs.min.js"></script>
-	<script src="./js/jquery.touchSwipe.min.js" defer></script>
-	<script src="./js/gmaps.min.js"></script>
-
 	<title>Contactez La Panthère</title>
 	<meta name="description"
 		content="Prenez contact avec l'agence La Panthère pour réaliser un design qui vous ressemble" />
@@ -179,7 +173,12 @@
 	</div>
 	<!-- Principal conteneur END -->
 
-
+	<!-- Chargement des scripts -->
+	<script src="./js/jquery-2.1.0.min.js"></script>
+	<script src="./js/bootstrap.min.js"></script>
+	<script src="./js/blocs.min.js"></script>
+	<script src="./js/jquery.touchSwipe.min.js" defer></script>
+	<script src="./js/gmaps.min.js"></script>
 </body>
 
 </html>
