--- a/index.html
+++ b/index.html
@@ -12,11 +12,7 @@
 	<link rel="stylesheet" type="text/css" href="style.min.css">
 
 
-	<script src="./js/jquery-2.1.0.min.js"></script>
-	<script src="./js/bootstrap.min.js"></script>
-	<script src="./js/blocs.min.js"></script>
-	<script src="./js/jquery.touchSwipe.min.js" defer></script>
-	<script src="./js/gmaps.min.js"></script>
+
 
 	<title>Agence La Panthère - Entreprise de webdesign Lyon</title>
 	<meta name="description"
@@ -187,7 +183,7 @@
 						</div>
 					</div>
 					<div class="row tight-width-whitespace portfolio-row">
-						<div class="col-sm-6">
+						<article class="col-sm-6">
 							<a href="#" data-lightbox="img/1.webp" data-gallery-id="gallery-1"
 								data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img
 									src="img/1.webp" alt="" class="img-responsive portfolio-thumb" /></a>
@@ -197,8 +193,8 @@
 							<p class="text-center">
 								Nous avons créé une nouvelle identité visuelle pour un journal lyonnais.
 							</p>
-						</div>
-						<div class="col-sm-6">
+						</article>
+						<article class="col-sm-6">
 							<a href="#" data-lightbox="img/2.webp" data-gallery-id="gallery-1"
 								data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img
 									src="img/2.webp" class="img-responsive portfolio-thumb" alt="" /></a>
@@ -208,10 +204,10 @@
 							<p class="text-center">
 								Nous avons conçu la plateforme idéale pour laisser place aux clichés des photographes.
 							</p>
-						</div>
+						</article>
 					</div>
 					<div class="row tight-width-whitespace portfolio-row">
-						<div class="col-sm-6">
+						<article class="col-sm-6">
 							<a href="#" data-lightbox="img/3.webp" data-gallery-id="gallery-1"
 								data-caption="Création d'un site internet pour un voyageur"
 								data-frame="snapshot-lb"><img src="img/3.webp" class="img-responsive portfolio-thumb"
@@ -223,8 +219,8 @@
 								Nous avons élaboré un site internet et des illustrations pour sublimer les vidéos et les
 								articles de ce voyageur.
 							</p>
-						</div>
-						<div class="col-sm-6">
+						</article>
+						<article class="col-sm-6">
 							<a href="#" data-lightbox="img/4.webp" data-gallery-id="gallery-1"
 								data-caption="Conception d'un site pour une agence de mariage"
 								data-frame="snapshot-lb"><img src="img/4.webp" class="img-responsive portfolio-thumb"
@@ -236,7 +232,7 @@
 								Nous avons travaillé avec cette agence pour créer un site internet permettant la
 								présentation détaillée de leurs prestations.
 							</p>
-						</div>
+						</article>
 					</div>
 				</div>
 			</div>
@@ -351,7 +347,12 @@
 	</div>
 	<!-- Principal conteneur END -->
 
-
+	<!-- Chargement des scripts -->
+	<script src="./js/jquery-2.1.0.min.js"></script>
+	<script src="./js/bootstrap.min.js"></script>
+	<script src="./js/blocs.min.js"></script>
+	<script src="./js/jquery.touchSwipe.min.js" defer></script>
+	<script src="./js/gmaps.min.js"></script>
 </body>
 
 </html>
