--- a/index.html
+++ b/index.html
@@ -274,25 +274,26 @@
 							<div class="flexBetween maxSize75 iconFooter">
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html"><span
-												class="fa fa-twitter icon-md"></span></a>
+										<a class="social" href="index.html" aria-label="link_twitter"><span
+												class="fa fa-twitter icon-md"></span>
+										</a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html"><span
+										<a class="social" href="index.html" aria-label="link_facebook"><span
 												class="fa fa-facebook icon-md"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html"><span
+										<a class="social" href="index.html" aria-label="link_dribble"><span
 												class="fa fa-dribbble icon-md"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html"><span
+										<a class="social" href="index.html" aria-label="link_instagram"><span
 												class="fa fa-instagram icon-md"></span></a>
 									</div>
 								</div>
