--- a/index.html
+++ b/index.html
@@ -267,9 +267,9 @@
 			<div class="container bloc-sm">
 				<div class="row">
 					<div class="col-sm-12">
-						<h4 class="text-center black">
+						<h3 class="text-center black titleFooter">
 							Agence La Panthère - Agence web basée à Lyon.<br>
-						</h4>
+						</h3>
 
 						<!-- Icones réseaux sociaux -->
 						<div class="row row-no-gutters social">
