Correction footerTitle sur les 2 page

--- a/contact.html
+++ b/contact.html
@@ -132,9 +132,9 @@
 			<div class="container bloc-sm">
 				<div class="row">
 					<div class="col-sm-12">
-						<p class="text-center black">
+						<h3 class="text-center black titleFooter">
 							Agence La Panthère - Agence web basée à Lyon.<br>
-						</p>
+						</h3>
 
 						<!-- Icones réseaux sociaux -->
 						<div class="row row-no-gutters social">
