--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
 							</div>
 							<div class="row flexColumnCenter">
 								<div class="col-sm-4 footerPartner">
-									<h4>Partenaires</h4>
+									<h3 class="titleFooter">Partenaires</h3>
 									<ul class="footerList">
 										<li><a href="voiture.com">voiture.com</a></li>
 										<li><a href="pizza.com">pizza.com</a></li>
@@ -311,7 +311,7 @@
 									</ul>
 								</div>
 								<div class="col-sm-4 footerPartner">
-									<h4>Annuaires liste 1</h4>
+									<h3 class="titleFooter">Annuaires liste 1</h3>
 									<ul class="footerList">
 										<li><a href="annuaireagence.com">annuaireagence</a></li>
 										<li><a href="annuaireseo.com">annuaireseo</a></li>
@@ -325,7 +325,7 @@
 									</ul>
 								</div>
 								<div class="col-sm-4 footerPartner">
-									<h4>Annuaires liste 2</h4>
+									<h3 class="titleFooter">Annuaires liste 2</h3>
 									<ul class="footerList">
 										<li><a href="betterseo.com">betterseo</a></li>
 										<li><a href="ameliorerseo.com">ameliorerseo</a></li>
