--- a/contact.html
+++ b/contact.html
@@ -141,26 +141,27 @@
 							<div class="flexBetween maxSize75 iconFooter">
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html" aria-label="link_twitter"><span
+										<a class="social" href="https://twitter.com/" aria-label="link_twitter"><span
 												class="fa fa-twitter icon-md"></span>
 										</a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html" aria-label="link_facebook"><span
-												class="fa fa-facebook icon-md"></span></a>
+										<a class="social" href="https://fr-fr.facebook.com/"
+											aria-label="link_facebook"><span class="fa fa-facebook icon-md"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html" aria-label="link_dribble"><span
+										<a class="social" href="https://dribbble.com/" aria-label="link_dribble"><span
 												class="fa fa-dribbble icon-md"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html" aria-label="link_instagram"><span
+										<a class="social" href="https://www.instagram.com/"
+											aria-label="link_instagram"><span
 												class="fa fa-instagram icon-md"></span></a>
 									</div>
 								</div>
