--- a/contact.html
+++ b/contact.html
@@ -122,8 +122,8 @@
 		<!-- bloc-7 END -->
 
 		<!-- ScrollToTop Button -->
-		<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span
-				class="fa fa-chevron-up"></span></a>
+		<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"
+			aria-label="Retour en haut de page"><span class="fa fa-chevron-up"></span></a>
 		<!-- ScrollToTop Button END-->
 
 
