--- a/index.html
+++ b/index.html
@@ -258,8 +258,8 @@
 		</main>
 
 		<!-- ScrollToTop Button -->
-		<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"
-			aria-label="Retour en haut de page"><span class="fa fa-chevron-up"></span></a>
+		<div class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span
+				class="fa fa-chevron-up"></span></div>
 		<!-- ScrollToTop Button END-->
 
 		<!-- Footer - bloc-8 -->
