modification aspect navigation clavier

--- a/index.html
+++ b/index.html
@@ -276,31 +276,33 @@
 							<div class="flexBetween maxSize75 iconFooter">
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="http://www.twitter.fr/" aria-label="link_twitter"><span
-												class="fa fa-twitter icon-md"></span>
+										<a class="social icon-social" href="http://www.twitter.fr/"
+											aria-label="link_twitter"><span class="fa fa-twitter icon-md"></span>
 										</a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="https://fr-fr.facebook.com"
+										<a class="social icon-social" href="https://fr-fr.facebook.com"
 											aria-label="link_facebook"><span class="fa fa-facebook icon-md"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="https://dribbble.com/" aria-label="link_dribble"><span
-												class="fa fa-dribbble icon-md"></span></a>
+										<a class="social icon-social" href="https://dribbble.com/"
+											aria-label="link_dribble"><span class="fa fa-dribbble icon-md"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="https://www.instagram.com"
+										<a class="social icon-social" href="https://www.instagram.com"
 											aria-label="link_instagram"><span
 												class="fa fa-instagram icon-md"></span></a>
 									</div>
 								</div>
 							</div>
+
+
 							<div class="row flexColumnCenter">
 								<div class="col-sm-4 footerPartner">
 									<h3 class="titleFooter">Partenaires</h3>
